plugins {
    id 'java'
    id 'org.springframework.boot' version '3.4.4'
    id 'io.spring.dependency-management' version '1.1.4'
    id 'application'
}

configurations {
    compileOnly {
        extendsFrom annotationProcessor
    }
}

bootJar.enabled = false
jar.enabled = true

allprojects {
    group = 'com.airbng'
    version = '1.0-SNAPSHOT'
    java.sourceCompatibility = JavaVersion.VERSION_17
    repositories {
        mavenCentral()
    }
    bootJar.enabled = false
    jar.enabled = true
}

subprojects {
    apply {
        plugin 'java'
        plugin 'org.springframework.boot'
        plugin 'io.spring.dependency-management'
        plugin 'application'
    }


    dependencies {
        // Spring Boot
        implementation 'org.springframework.boot:spring-boot-starter-web'
        implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
        implementation 'org.springframework.boot:spring-boot-starter-data-redis'
        implementation 'org.springframework.boot:spring-boot-starter-data-jdbc'
        implementation 'org.springframework.boot:spring-boot-starter-thymeleaf'
        implementation 'org.springframework.boot:spring-boot-starter-validation'
        implementation 'com.fasterxml.jackson.datatype:jackson-datatype-jsr310'


        // Spring Session
        implementation 'org.springframework.session:spring-session-data-redis'

        // Lombok
        compileOnly 'org.projectlombok:lombok'
        annotationProcessor 'org.projectlombok:lombok'
        testCompileOnly 'org.projectlombok:lombok'
        testAnnotationProcessor 'org.projectlombok:lombok'

        // MyBatis
        implementation 'org.mybatis.spring.boot:mybatis-spring-boot-starter:3.0.4'

        // Database
        implementation 'org.apache.commons:commons-dbcp2:2.9.0'
        runtimeOnly 'com.mysql:mysql-connector-j'

        // AWS SDK
        implementation 'com.amazonaws:aws-java-sdk-s3:1.12.695'

        // File Upload
        implementation 'commons-fileupload:commons-fileupload:1.5'
        implementation 'commons-io:commons-io:2.11.0'

        // Security (crypto only)
        implementation 'org.springframework.boot:spring-boot-starter-security'

        // JWT
        implementation 'io.jsonwebtoken:jjwt-api:0.12.6'
        implementation 'io.jsonwebtoken:jjwt-impl:0.12.6'
        implementation 'io.jsonwebtoken:jjwt-jackson:0.12.6'

        // Cache
        implementation 'com.github.ben-manes.caffeine:caffeine:3.1.8'

        // EL
        implementation 'org.glassfish:jakarta.el:3.0.4'

        // Swagger
        implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.7.0'

        // Test
        testImplementation 'org.springframework.boot:spring-boot-starter-test'
        testImplementation 'org.mybatis.spring.boot:mybatis-spring-boot-starter-test:3.0.4'
        testImplementation 'org.springframework.security:spring-security-test'

        implementation 'org.springframework.boot:spring-boot-starter-actuator'
        runtimeOnly 'io.micrometer:micrometer-registry-prometheus'

        //QueryDsl
        implementation 'com.querydsl:querydsl-jpa:5.0.0:jakarta'
        annotationProcessor(
                "jakarta.persistence:jakarta.persistence-api",
                "jakarta.annotation:jakarta.annotation-api",
                "com.querydsl:querydsl-apt:5.0.0:jakarta"
        )

        // ArchUnit
        testImplementation "com.tngtech.archunit:archunit-junit5:1.3.0"
    }


    tasks.named('test') {
        useJUnitPlatform()
    }
}


